- Ein Anzeigefehler von beendeten Projekten, die auch keine Credits haben, wurde behoben.
- Mit dev-Version 21 wurde das interne error-Management komplett entfernt, um es von Grund auf neu zu gestalten!
- Mit dev-Version 22 wurde das error-Management neu gestaltet (noch nicht abschließend - nur ein Anfang!)

geänderte bzw. neu hinzugefügte Dateien (ausgehend vom Verzeichnis /web):
  - ../changelog.txt
  - ../cronjob/cronjob.php
  - ./assets/css/userstats_layout.css
  - ./assets/js/moment/moment-timezone-with-data-2012-2022.js
  - ./assets/js/moment/moment-with-locales.min.js
  - ./lang/de.txt.php
  - ./lang/de.datatables.json
  - ./lang/en.txt.php
  - ./lang/de.datatables.json
  - ./settings/settings.php
  - ./xml/
  - ajax_pending.php
  - ajax_wcg_detail.php
  - check_update.php
  - error.php
  - footer.php
  - header.php
  - index.php
  - nav.php
  - pendings.php
  - project.php
  - tasks.php
  - version.php




Version 5.1.1: 
==============
- Es wurde ein Fehler beim Anzeigen der Error-Seiten behoben. Nun sollten auch die richtigen Meldungen erscheinen, sofern ein falscher Link direkt aufgerufen werden sollte
- Das Link für weitere Infos in der Navbar wurde nun besser positioniert
- Der Link zu den SG-Stats wurde aktualisiert
- Je nach Projekt-Status werden in den Projekt-Details nun mehr oder weniger Angaben zu den errechneten Punkten ausgegeben.


geänderte bzw. neu hinzugefügte Dateien (ausgehend vom Verzeichnis /web):
    - ../changelog.txt
    - ./settings/settings.php
    - ./assets/css/userstats_layout.css
    - error.php
    - index.php
    - project.php
    - nav.php
    - project.php
    - version.php



Version 5.1.0: 
==============
- Das Error-Management für neue Nutzer der BOINC-Userstats wurde verbessert (Issue #21)
  Sofern noch keine Änderungen an den Credits bei den Projekten vorhanden waren, wurde lediglich der Header und Footer angezeigt.